# libuv-sys

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: check-for-new-version.yml  prepare-new-libuv-version.yml  test-and-release.yml
examples/: raw_tty_echo.rs
scripts/: check-version.sh  prepare.sh  release.sh
src/: lib.rs
