[package]
name = "libuv-sys2"
version = "1.46.1"
description = "Thin FFI bindings for libuv"
homepage = "https://github.com/bmatcuk/libuv-sys/"
repository = "https://github.com/bmatcuk/libuv-sys/"
categories = ["command-line-interface", "external-ffi-bindings"]
keywords = ["events", "libevent", "loop"]
readme = "README.md"
license-file = "LICENSE"
authors = ["Bob Matcuk <bmatcuk@gmail.com>"]
edition = "2018"
links = "uv"

[features]
skip-pkg-config = []

[badges]
travis-ci = { repository = "bmatcuk/libuv-sys" }
maintenance = { status = "actively-developed" }

[build-dependencies]
bindgen = { version = "0.68.1", default-features = false, features = ["runtime"] }
cc = "1.0"
pkg-config = "0.3.17"
